[package]
name = "polkadot_test"
version = "0.1.0"
edition = "2024"

[dependencies]
sp-core = {version = "38.1.0",default-features = false}
polkadot-sdk = { version = "2509.0.0", default-features = false, features = ["pallet-balances", "pallet-parameters", "runtime", "try-runtime","experimental"]}
codec = { version = "3.7.5", default-features = false, package = "parity-scale-codec" }
scale-info = { version = "2.11.6", default-features = false }

[build-dependencies]
polkadot-sdk = { version = "2509.0.0", optional = true, features = ["substrate-wasm-builder"] }


[features]
default = ["std"]
std = [
	"codec/std",
	"polkadot-sdk/std",
	"sp-core/std",
	"scale-info/std",
]
