[package]
name = "polkadot_test"
version = "0.1.0"
edition = "2024"

[dependencies]
hex = { version = "0.4", default-features = false, features=["alloc"] }
sp-core = {version = "38.1.0",default-features = false}
polkadot-sdk = { version = "2509.0.0", default-features = false, features = ["pallet-balances", "pallet-parameters","sp-storage", "runtime", "try-runtime","experimental"]}
codec = { version = "3.7.5", default-features = false, package = "parity-scale-codec" }
scale-info = { version = "2.11.6", default-features = false }
serde_json = { version = "1.0.145", default-features = false, features = ["alloc"] }

[build-dependencies]
polkadot-sdk = { version = "2509.0.0", optional = true, features = ["substrate-wasm-builder"] }

[features]
default = ["std"]
std = [
	"codec/std",
	"polkadot-sdk/std",
	"sp-core/std",
	"scale-info/std",
	"serde_json/std",
]

runtime-benchmarks = [
  "polkadot-sdk/runtime-benchmarks",
]